fixing the icon size and spacing

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -3,14 +3,14 @@
 #app {
     height: 100vh;
     #background {
-        background-color: bisque;
-
         .navbar {
+            #website-icon{
+                height: 3em;
+                margin-right: .5em;
+            }
             #navbar-options {
                 margin-left: auto;
             }
         }
-
-
     }
 }
